Fix caption in notebooks

--- a/data_analysis/NN-bitshuffle-blosclz-zstd-3entropies_3favors.ipynb
+++ b/data_analysis/NN-bitshuffle-blosclz-zstd-3entropies_3favors.ipynb
@@ -36,11 +36,11 @@
    "source": [
     "## Collect data from 3 different containers\n",
     "\n",
-    "30: entropy bitshuffle (no split)\n",
+    "30: entropy bitshuffle (split)\n",
     "\n",
-    "31: entropy shuffle (no split)\n",
+    "31: entropy shuffle (split)\n",
     "\n",
-    "32: entropy nofilter (no split)\n",
+    "32: entropy nofilter (split)\n",
     "\n",
     "0: blosclz bitshuffle split\n",
     "\n",
