--- a/data_analysis/NN-fake.ipynb
+++ b/data_analysis/NN-fake.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Collect data from 3 different containers\n",
     "\n",
-    "30: entropy bitshuffle (no split)\n",
+    "30: entropy bitshuffle (split)\n",
     "\n",
     "0: blosclz bitshuffle split\n",
     "\n",
