--- a/data_analysis/Neural-Network-SPEED.ipynb
+++ b/data_analysis/Neural-Network-SPEED.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "## Collect data from 3 different containers\n",
     "\n",
-    "30: entropy shuffle (no split)\n",
+    "30: entropy shuffle (split)\n",
     "\n",
     "0: blosclz shuffle split\n",
     "\n",
