--- a/data_analysis/Red-neuronal-3codecs-shuffle-3datasets-CRATIO.ipynb
+++ b/data_analysis/Red-neuronal-3codecs-shuffle-3datasets-CRATIO.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Collect data from 3 different containers\n",
     "\n",
-    "30: entropy shuffle (no split)\n",
+    "30: entropy shuffle (split)\n",
     "\n",
     "0: zstd shuffle split\n",
     "\n",
