--- a/data_analysis/Red-neuronal-4codecs-v2-shuffle-3datasets.ipynb
+++ b/data_analysis/Red-neuronal-4codecs-v2-shuffle-3datasets.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "## Collect data from 3 different containers\n",
     "\n",
-    "30: entropy shuffle (no split)\n",
+    "30: entropy shuffle (split)\n",
     "\n",
     "0: blosclz shuffle split\n",
     "\n",
